@@ -12,10 +12,8 @@ import org.apache.arrow.vector.types.pojo.ArrowType;
 import org.apache.arrow.vector.types.pojo.Field;
 import org.apache.arrow.vector.types.pojo.FieldType;
 import org.testng.Assert;
-import org.testng.SkipException;
 import org.testng.annotations.Test;
 
-import java.sql.Timestamp;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
@@ -24,49 +22,42 @@ import java.util.Collections;
 import java.util.List;
 
 public class TestArrowResultPage {
-    @Test(groups = {"UNIT"})
+    @Test(groups = {"UNIT_ARROW"})
     public void testArrowPageReturnsTypedValues() throws Exception {
-        try {
-            RootAllocator rootAllocator = new RootAllocator(Long.MAX_VALUE);
-            BufferAllocator allocator = rootAllocator.newChildAllocator("test-arrow-page", 0, Long.MAX_VALUE);
-            ArrowResultPage page;
-            Field intField = new Field("n", FieldType.notNullable(new ArrowType.Int(32, true)), null);
-            Field dateField = new Field("d", FieldType.nullable(new ArrowType.Date(DateUnit.DAY)), null);
-            Field tsField = new Field("ts", FieldType.nullable(new ArrowType.Timestamp(TimeUnit.MICROSECOND, null)), null);
+        RootAllocator rootAllocator = new RootAllocator(Long.MAX_VALUE);
+        BufferAllocator allocator = rootAllocator.newChildAllocator("test-arrow-page", 0, Long.MAX_VALUE);
+        ArrowResultPage page;
+        Field intField = new Field("n", FieldType.notNullable(new ArrowType.Int(32, true)), null);
+        Field dateField = new Field("d", FieldType.nullable(new ArrowType.Date(DateUnit.DAY)), null);
+        Field tsField = new Field("ts", FieldType.nullable(new ArrowType.Timestamp(TimeUnit.MICROSECOND, null)), null);
 
-            IntVector intVector = new IntVector(intField, allocator);
-            intVector.allocateNew();
-            intVector.set(0, 7);
-            intVector.setValueCount(1);
+        IntVector intVector = new IntVector(intField, allocator);
+        intVector.allocateNew();
+        intVector.set(0, 7);
+        intVector.setValueCount(1);
 
-            DateDayVector dateVector = new DateDayVector(dateField, allocator);
-            dateVector.allocateNew();
-            dateVector.set(0, (int) LocalDate.of(2024, 4, 16).toEpochDay());
-            dateVector.setValueCount(1);
+        DateDayVector dateVector = new DateDayVector(dateField, allocator);
+        dateVector.allocateNew();
+        dateVector.set(0, (int) LocalDate.of(2024, 4, 16).toEpochDay());
+        dateVector.setValueCount(1);
 
-            TimeStampMicroVector tsVector = new TimeStampMicroVector(tsField, allocator);
-            tsVector.allocateNew();
-            org.apache.arrow.vector.holders.TimeStampMicroHolder tsHolder = new org.apache.arrow.vector.holders.TimeStampMicroHolder();
-            tsHolder.value = LocalDateTime.of(2024, 4, 16, 12, 34, 56, 789000000).toInstant(ZoneOffset.UTC).toEpochMilli() * 1000;
-            tsVector.setSafe(0, tsHolder);
-            tsVector.setValueCount(1);
+        TimeStampMicroVector tsVector = new TimeStampMicroVector(tsField, allocator);
+        tsVector.allocateNew();
+        org.apache.arrow.vector.holders.TimeStampMicroHolder tsHolder = new org.apache.arrow.vector.holders.TimeStampMicroHolder();
+        tsHolder.value = LocalDateTime.of(2024, 4, 16, 12, 34, 56, 789000000).toInstant(ZoneOffset.UTC).toEpochMilli() * 1000;
+        tsVector.setSafe(0, tsHolder);
+        tsVector.setValueCount(1);
 
-            VectorSchemaRoot root = new VectorSchemaRoot(
-                    Arrays.asList(intField, dateField, tsField),
-                    Arrays.asList(intVector, dateVector, tsVector),
-                    1);
-            page = new ArrowResultPage(allocator, Collections.singletonList(root), Collections.emptyMap());
-            Assert.assertEquals(page.getValue(0, 0), 7);
-            Assert.assertEquals(page.getValue(0, 1), java.sql.Date.valueOf("2024-04-16"));
-            Assert.assertEquals(page.getValue(0, 2), Timestamp.valueOf(LocalDateTime.of(2024, 4, 16, 12, 34, 56, 789000000)));
-            closeAllocator(page);
-            closeAllocator(rootAllocator);
-        } catch (Throwable t) {
-            if (isArrowAllocatorBootstrapIssue(t)) {
-                throw new SkipException("Arrow allocator requires --add-opens java.base/java.nio on this JDK", t);
-            }
-            throw t;
-        }
+        VectorSchemaRoot root = new VectorSchemaRoot(
+                Arrays.asList(intField, dateField, tsField),
+                Arrays.asList(intVector, dateVector, tsVector),
+                1);
+        page = new ArrowResultPage(allocator, Collections.singletonList(root), Collections.emptyMap());
+        Assert.assertEquals(page.getValue(0, 0), 7);
+        Assert.assertEquals(page.getValue(0, 1), java.sql.Date.valueOf("2024-04-16"));
+        Assert.assertEquals(page.getValue(0, 2), LocalDateTime.of(2024, 4, 16, 12, 34, 56, 789000000));
+        closeAllocator(page);
+        closeAllocator(rootAllocator);
     }
 
     public void testArrowSchemaMapsToJdbcTypes() throws Exception {
@@ -88,18 +79,5 @@ public class TestArrowResultPage {
             closeable.close();
         } catch (IllegalStateException ignored) {
         }
-    }
-
-    private static boolean isArrowAllocatorBootstrapIssue(Throwable throwable) {
-        Throwable current = throwable;
-        while (current != null) {
-            String message = current.getMessage();
-            if (message != null && (message.contains("Failed to initialize MemoryUtil")
-                    || message.contains("does not \"opens java.nio\""))) {
-                return true;
-            }
-            current = current.getCause();
-        }
-        return false;
     }
 }
